# AlertAware

./: .gitignore  README.md  camera.py  controller.py  eyes_recognition.py  fatigue_detection.py  requirements.txt  run_model_on_crops.py  telegram_server.py
camera/: CMakeLists.txt  main.cpp
face_recognition/: controller.py  eyes_recognition.py  fatigue_detection.py  requirements.txt  run_model_on_crops.py  scan_to_csv.py
